Added js functionality

--- a/vertical-slider/index.html
+++ b/vertical-slider/index.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <div class="slider-container">
-      <div class="left-slider">
+      <div class="left-slide">
         <div class="winter">
-          <h1>Bubble</h1>
+          <h1>Frozen Bubble</h1>
           <p>bubble flake in the dead of winter</p>
         </div>
         <div class="spring">
@@ -28,7 +28,7 @@
           <p>the world is open</p>
         </div>
       </div>
-      <div class="right-slider">
+      <div class="right-slide">
         <div class="autumn-image"></div>
         <div class="summer-image"></div>
         <div class="spring-image"></div>
