--- a/random-picker/index.html
+++ b/random-picker/index.html
@@ -10,15 +10,11 @@
   <body>
     <div class="container">
       <h3>
-        Enter all of the choices seperated by a comma (',') <br />
+        Enter all of the choices separated by a comma (',') <br />
         Press enter when you‘re done
       </h3>
       <textarea placeholder="Enter choices here..." id="textarea"></textarea>
-      <div id="tags">
-        <span class="tag">Choice 1</span>
-        <span class="tag">Choice 2</span>
-        <span class="tag">Choice 3</span>
-      </div>
+      <div id="tags"></div>
     </div>
     <script src="script.js"></script>
   </body>
