--- a/user-filter/index.html
+++ b/user-filter/index.html
@@ -16,16 +16,7 @@
       </header>
       <ul id="result" class="user-list">
         <li>
-          <img src="https://randomuser.me/api/portraits/women/33.jpg" alt="Sam" />
-        </li>
-        <li>
-          <img src="https://randomuser.me/api/portraits/women/63.jpg" alt="Liz" />
-        </li>
-        <li>
-          <img src="https://randomuser.me/api/portraits/women/23.jpg" alt="Bo" />
-        </li>
-        <li>
-          <img src="https://randomuser.me/api/portraits/women/18.jpg" alt="Becky" />
+          <h3>Loading...</h3>
         </li>
       </ul>
     </div>
