--- a/content-placeholder/index.html
+++ b/content-placeholder/index.html
@@ -9,34 +9,24 @@
   </head>
   <body>
     <div class="card">
-      <div class="card-header animated-bg" id="header">
-        <img
-          src="https://images.unsplash.com/photo-1629228735562-b0c229605856?ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw3fHx8ZW58MHx8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
-          alt=""
-        />
-      </div>
+      <div class="card-header animated-bg" id="header">&nbsp;</div>
       <div class="card-content">
         <h3 class="card-title animated-bg animated-bg-text" id="title">
-          Lorem ipsum dolor sit amet.
+          &nbsp;
         </h3>
         <p class="card-excerpt" id="excerpt">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab,
-          recusandae exercitationem!
-          <span class="animated-bg animated-bg-text">&nbsp</span>
-          <span class="animated-bg animated-bg-text">&nbsp</span>
-          <span class="animated-bg animated-bg-text">&nbsp</span>
+          &nbsp;
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
         </p>
         <div class="author">
-          <div class="profile-img animated-bg" id="profile_img">
-            <img src="https://randomuser.me/api/portraits/men/35.jpg" alt="" />
-          </div>
+          <div class="profile-img animated-bg" id="profile_img">&nbsp;</div>
           <div class="author-info">
-            <strong class="animated-bg animated-bg-text" id="name"
-              >Peter Smith</strong
+            <strong class="animated-bg animated-bg-text" id="fname"
+              >&nbsp;</strong
             >
-            <small class="animated-bg animated-bg-text" id="date"
-              >01 March 2011</small
-            >
+            <small class="animated-bg animated-bg-text" id="date">&nbsp;</small>
           </div>
         </div>
       </div>
